plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.24.1'
}

group 'com.deveone'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.9.0'
}

sourceCompatibility = '17'
targetCompatibility = '17'

ext.java9Args = [
        // For various usages of TraversalEngine
        "--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls",
        "--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls",
        // For various behaviors across controls
        "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls",
        // For ReadOnlyUnbackedObservableList across files
        "--add-exports=javafx.controls/com.sun.javafx.scene.control=org.controlsfx.controls",
        // For InputMap used in behavior classes
        "--add-exports=javafx.controls/com.sun.javafx.scene.control.inputmap=org.controlsfx.controls",
        // For EventHandlerManager in AutoCompletionBinding
        "--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls",
        // For MappingChange, NonIterableChange across files
        "--add-exports=javafx.base/com.sun.javafx.collections=org.controlsfx.controls",
        // For VersionInfo in VersionChecker
        "--add-exports=javafx.base/com.sun.javafx.runtime=org.controlsfx.controls",
]

applicationDefaultJvmArgs = ["--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls\n" +
                                     "--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls"]

ext.java9RuntimeArgs = [
        // For accessing VirtualFlow field from the base class in GridViewSkin
        "--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls",
        // For accessing getChildren in ImplUtils
        "--add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls"
]

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'com.deveone.censumcubiles'
    mainClass = 'com.deveone.censumcubiles.CensumCublilesApp'
}

javafx {
    version = '17.0.1'
    modules = ['javafx.swing', 'javafx.controls', 'javafx.fxml', 'javafx.web']
}

dependencies {
    implementation 'mysql:mysql-connector-java:8.0.30'

    implementation('org.controlsfx:controlsfx:11.1.2')
    implementation('com.dlsc.formsfx:formsfx-core:11.5.0') {
        exclude(group: 'org.openjfx')
    }
    implementation('net.synedra:validatorfx:0.3.1') {
        exclude(group: 'org.openjfx')
    }

    implementation('eu.hansolo.fx:countries:17.0.23') {
        exclude(group: 'org.openjfx')
    }
    implementation('eu.hansolo.fx:heatmap:17.0.12') {
        exclude(group: 'org.openjfx')
    }
    implementation('eu.hansolo:toolboxfx:17.0.31') {
        exclude(group: 'org.openjfx')
    }
    implementation('eu.hansolo:toolbox:17.0.33') {
        exclude(group: 'org.openjfx')
    }

    implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1')
    implementation('eu.hansolo:tilesfx:17.1.15') {
        exclude(group: 'org.openjfx')
    }

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}